--- a/Atomics Uploader.html
+++ b/Atomics Uploader.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/3082b29a41.js" crossorigin="anonymous" type="08384536237c8154f806ecca-text/javascript"></script>
-<title>Atomics SelfBot HELP</title>
-<link rel="shortcut icon" type="image/png" href="AtomicLogoWhiite.png">
+    <title>Atomics SelfBot Help</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="SelfBot Help">
+    <meta name="keywords" content="SelfBot Help, csgo, hvh, AtomicFN#6969">
+    <meta name="author" content="AtomicFN#6969">
+    <meta property="og:type" content="site">
+    <meta property="og:title" content="Atomic SelfBot Help">
+    <meta property="og:description" content="Commands for Atomics SelfBot">
+    <meta property="og:url" content="https://selfbothelp.herokuapp.com/Atomics%20Uploader.html">
+    <meta property="og:image" content="assets/icons/Atomics Hack3r.Club.png">
+    <meta itemprop="name" content="Atomic SelfBot Help">
+    <meta itemprop="description" content="Atomic SelfBot Help">
+    <meta itemprop="image" content="other\AtomicLogoWhiite.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
 
@@ -268,14 +278,6 @@ section p{
     margin: -10px;
     
 }
-
 /*discord*/ 
-
-<meta property="og:type" content="website">
-<meta property="og:title" content="Atomics SelfBot Commands" />
-<meta property="og:description" content="SelfBot Commands" />
-<meta property="og:url" content="" />
-<meta property="og:image" content="AtomicLogoWhiite.png" />
-
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="08384536237c8154f806ecca-|49" defer=""></script></body>
 </html>
