--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -90,6 +90,9 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 20] ::  gay             [username]    :: says how gay someone is</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 21] ::  help            [        ]    :: Brings you to the Help/Commands Website</p>
 </section>  
 </div>
 <style>
