--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -93,6 +93,9 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 21] ::  help            [        ]    :: Brings you to the Help/Commands Website</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 22] ::  dmall            [content ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
 </section>  
 </div>
 <style>
