--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -96,6 +96,9 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 22] ::  dmall            [content ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 23] ::  ascii            [content ]    :: Sends a message in ASCII</p>
 </section>  
 </div>
 <style>
