--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -80,25 +80,46 @@
     <a>[COMMAND 16] ::  hello           [username]    :: says hello to someone</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 17] ::  creditgenvisa   [        ]    :: Generates Credit Cards</p>
+    <a>[COMMAND 17] ::  creditgenvisa   [         ]    :: Generates Credit Cards</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 18] ::  creditgen       [        ]    :: Generates Credit Cards</p>
+    <a>[COMMAND 18] ::  creditgen       [         ]    :: Generates Credit Cards</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 19] ::  userinfo        [username]    :: Gets all the info about a SERVER Member (Doesnt work in DM's)</p>
+    <a>[COMMAND 19] ::  userinfo        [username ]    :: Gets all the info about a SERVER Member (Doesnt work in DM's)</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 20] ::  gay             [username]    :: says how gay someone is</p>
+    <a>[COMMAND 20] ::  gay             [username ]    :: says how gay someone is</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 21] ::  help            [        ]    :: Brings you to the Help/Commands Website</p>
+    <a>[COMMAND 21] ::  help            [         ]    :: Brings you to the Help/Commands Website</p>
 	<a> </p>
 	</div>
     <a>[COMMAND 22] ::  dmall            [content ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
 	<a> </p>
 	</div>
     <a>[COMMAND 23] ::  ascii            [content ]    :: Sends a message in ASCII</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 24] ::  rps              [content ]    :: Play rock paper scissors</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 25] ::  slap            [username ]    :: Slap someone</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 26] ::  question        [content  ]    :: Its an Q&A..</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 27] ::  coinflip        [         ]    :: Flips a Coin</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 28] ::  hammer          [username ]    :: hammer someone</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 29] ::  ide             [         ]    :: Shows some IDE code editor</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 30] ::  roll            [         ]    :: Rolls between numbers</p>
 </section>  
 </div>
 <style>
