--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -22,7 +22,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands</p></section>
+<p>Commands [30]</p></section>
 
 <div class="arrow">
     <span></span></div>
