--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -116,7 +116,7 @@
     <a>[COMMAND 28] ::  hammer          [username ]    :: hammer someone</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 29] ::  ide             [         ]    :: Shows some IDE code editor</p>
+    <a>[COMMAND 29] ::  ide             [         ]    :: Shows some IDE code editors</p>
 	<a> </p>
 	</div>
     <a>[COMMAND 30] ::  roll            [         ]    :: Rolls between numbers</p>
