--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -120,6 +120,9 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 30] ::  roll            [         ]    :: Rolls between numbers</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 31] ::  nickname        [username ] [conten t]   :: Rolls between numbers</p>
 </section>  
 </div>
 <style>
