--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -123,6 +123,9 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 31] ::  nickname        [username ] [conten t]   :: Rolls between numbers</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 32] ::  serverinfo      [         ]    :: Information about the server</p>
 </section>  
 </div>
 <style>
