--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -126,6 +126,9 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 32] ::  serverinfo      [         ]    :: Information about the server</p>
+	<a> </p>
+	</div>
+    <a>[COMMAND 33] ::  uptime          [         ]    :: Displays the Uptime</p>
 </section>  
 </div>
 <style>
