--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -129,6 +129,10 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 33] ::  uptime          [         ]    :: Displays the Uptime</p>
+	<a> </p>
+	</div>
+	<a> </p>
+	</div>
 </section>  
 </div>
 <style>
