--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Atomic SelfBot Help">
     <meta property="og:description" content="Commands for Atomics SelfBot">
     <meta property="og:url" content="https://selfbothelp.herokuapp.com/Atomics%20Uploader.html">
-    <meta property="og:image" content="assets/icons/Atomics Hack3r.Club.png">
+    <meta property="og:image" content="other\AtomicLogoWhiite.png">
     <meta itemprop="name" content="Atomic SelfBot Help">
     <meta itemprop="description" content="Atomic SelfBot Help">
     <meta itemprop="image" content="other\AtomicLogoWhiite.png">
