--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -131,6 +131,9 @@
     <a>[COMMAND 33] ::  uptime          [         ]    :: Displays the Uptime</p>
 	<a> </p>
 	</div>
+    <a>[COMMAND 34] ::  accgen          [         ]    :: Generates a Random Account</p>
+	<a> </p>
+	</div>
 	<a> </p>
 	</div>
 </section>  
