--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -134,6 +134,9 @@
     <a>[COMMAND 34] ::  accgen          [         ]    :: Generates a Random Account</p>
 	<a> </p>
 	</div>
+    <a>[COMMAND 35] ::  im              [content  ]    :: Picture with your own text in it</p>
+	<a> </p>
+	</div>
 	<a> </p>
 	</div>
 </section>  
