--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -3,6 +3,7 @@
 <head>
     <title>Atomics SelfBot Help</title>
     <meta charset="UTF-8">
+	<link rel="shortcut icon" type="image/png" href="/AtomicLogoWhiite.png"/>
     <meta name="description" content="SelfBot Help">
     <meta name="keywords" content="SelfBot Help, csgo, hvh, AtomicFN#6969">
     <meta name="author" content="AtomicFN#6969">
@@ -10,10 +11,8 @@
     <meta property="og:title" content="Atomic SelfBot Help">
     <meta property="og:description" content="Commands for Atomics SelfBot">
     <meta property="og:url" content="https://selfbothelp.herokuapp.com/Atomics%20Uploader.html">
-    <meta property="og:image" content="other\AtomicLogoWhiite.png">
     <meta itemprop="name" content="Atomic SelfBot Help">
     <meta itemprop="description" content="Atomic SelfBot Help">
-    <meta itemprop="image" content="other\AtomicLogoWhiite.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
@@ -22,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [35]</p></section>
+<p>Commands [36]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -32,52 +31,52 @@
 	<a> </p>
 	<a> </p>
 </div>
-    <a>[COMMAND 1]  ::  ping            [        ]    :: Displays your ping</p>
+    <a>[COMMAND 1]  ::  ping            [         ]    :: Displays your ping</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 2]  ::  purge           [100     ]    :: Deletes 100 messages you sent.</p>
+    <a>[COMMAND 2]  ::  purge           [100      ]    :: Deletes 100 messages you sent.</p>
+	<a> </p> 
+	        </div>
+    <a>[COMMAND 3]  ::  embed           [content  ]    :: Send a message in a embed.</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 3]  ::  embed           [content ]    :: Send a message in a embed.</p>
+    <a>[COMMAND 4]  ::  restart         [         ]    :: Restarts the bot</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 4]  ::  restart         [        ]    :: Restarts the bot</p>
-	<a> </p>
-	        </div>
-    <a>[COMMAND 5]  ::  spam            [ID      ]    :: Spam a users DM</p>
+    <a>[COMMAND 5]  ::  spam            [ID       ]    :: Spam a users DM</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 6]  ::  tokengen        [content ]    :: Generates 3 Discord Tokens</p>
+    <a>[COMMAND 6]  ::  tokengen        [content  ]    :: Generates 3 Discord Tokens</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 7]  ::  nitrogen        [content ]    :: Generates 3 Discord Nitro Codes</p>
+    <a>[COMMAND 7]  ::  nitrogen        [content  ]    :: Generates 3 Discord Nitro Codes</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 8]  ::  atomic          [content ]    :: See what it does</p>
+    <a>[COMMAND 8]  ::  atomic          [content  ]    :: See what it does</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 9]  ::  lettercount     [content ]    :: Counts letters</p>
+    <a>[COMMAND 9]  ::  lettercount     [content  ]    :: Counts letters</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 10] ::  rpcname         [content ]    :: Change RPC Details</p>
+    <a>[COMMAND 10] ::  rpcname         [content  ]    :: Change RPC Details</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 11] ::  hack            [username]    :: Hack somebodys account</p>
+    <a>[COMMAND 11] ::  hack            [username ]    :: Hack somebodys account</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 12] ::  restart         [        ]    :: Restarts the SelfBot</p>
+    <a>[COMMAND 12] ::  restart         [         ]    :: Restarts the SelfBot</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 13] ::  dick            [username]    :: Displays the dicksize</p>
+    <a>[COMMAND 13] ::  dick            [username ]    :: Displays the dicksize</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 14] ::  image           [content ]    :: gets an image for what you searched</p>
+    <a>[COMMAND 14] ::  image           [content  ]    :: gets an image for what you searched</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 15] ::  avatar          [        ]    :: Displays your Profile picture</p>
+    <a>[COMMAND 15] ::  avatar          [         ]    :: Displays your Profile picture</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 16] ::  hello           [username]    :: says hello to someone</p>
+    <a>[COMMAND 16] ::  hello           [username ]    :: says hello to someone</p>
 	<a> </p>
 		        </div>
     <a>[COMMAND 17] ::  creditgenvisa   [         ]    :: Generates Credit Cards</p>
@@ -135,12 +134,14 @@
 	<a> </p>
 	</div>
     <a>[COMMAND 35] ::  im              [content  ]    :: Picture with your own text in it</p>
-	<a> </p>
+		<a> </p>
 	</div>
-	<a> </p>
-	</div>
-</section>  
-</div>
+    <a>[COMMAND 36] ::  everyone       [          ]    :: Mentiones everyone without permissions</p>
+	<a> </p> 
+<section id="home">
+<h1>Atomics SelfBot Settings</h1>
+<p>This is not availible yet...</p></section>
+</section>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 	@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
