--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [36]</p></section>
+<p>Commands [38]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -31,112 +31,118 @@
 	<a> </p>
 	<a> </p>
 </div>
-    <a>[COMMAND 1]  ::  ping            [         ]    :: Displays your ping</p>
+    <a>[COMMAND 1]  ::  ping            [            ]    :: Displays your ping</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 2]  ::  purge           [100      ]    :: Deletes 100 messages you sent.</p>
+    <a>[COMMAND 2]  ::  purge           [100         ]    :: Deletes 100 messages you sent.</p>
 	<a> </p> 
 	        </div>
-    <a>[COMMAND 3]  ::  embed           [content  ]    :: Send a message in a embed.</p>
+    <a>[COMMAND 3]  ::  embed           [content     ]    :: Send a message in a embed.</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 4]  ::  restart         [         ]    :: Restarts the bot</p>
+    <a>[COMMAND 4]  ::  restart         [            ]    :: Restarts the bot</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 5]  ::  spam            [ID       ]    :: Spam a users DM</p>
+    <a>[COMMAND 5]  ::  spam            [ID          ]    :: Spam a users DM</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 6]  ::  tokengen        [content  ]    :: Generates 3 Discord Tokens</p>
+    <a>[COMMAND 6]  ::  tokengen        [content     ]    :: Generates 3 Discord Tokens</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 7]  ::  nitrogen        [content  ]    :: Generates 3 Discord Nitro Codes</p>
+    <a>[COMMAND 7]  ::  nitrogen        [content     ]    :: Generates 3 Discord Nitro Codes</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 8]  ::  atomic          [content  ]    :: See what it does</p>
+    <a>[COMMAND 8]  ::  atomic          [content     ]    :: See what it does</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 9]  ::  lettercount     [content  ]    :: Counts letters</p>
+    <a>[COMMAND 9]  ::  lettercount     [content     ]    :: Counts letters</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 10] ::  rpcname         [content  ]    :: Change RPC Details</p>
+    <a>[COMMAND 10] ::  rpcname         [content     ]    :: Change RPC Details</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 11] ::  hack            [username ]    :: Hack somebodys account</p>
+    <a>[COMMAND 11] ::  hack            [username    ]    :: Hack somebodys account</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 12] ::  restart         [         ]    :: Restarts the SelfBot</p>
+    <a>[COMMAND 12] ::  restart         [            ]    :: Restarts the SelfBot</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 13] ::  dick            [username ]    :: Displays the dicksize</p>
+    <a>[COMMAND 13] ::  dick            [username    ]    :: Displays the dicksize</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 14] ::  image           [content  ]    :: gets an image for what you searched</p>
+    <a>[COMMAND 14] ::  image           [content     ]    :: gets an image for what you searched</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 15] ::  avatar          [         ]    :: Displays your Profile picture</p>
+    <a>[COMMAND 15] ::  avatar          [            ]    :: Displays your Profile picture</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 16] ::  hello           [username ]    :: says hello to someone</p>
+    <a>[COMMAND 16] ::  hello           [username    ]    :: says hello to someone</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 17] ::  creditgenvisa   [         ]    :: Generates Credit Cards</p>
+    <a>[COMMAND 17] ::  creditgenvisa   [            ]    :: Generates Credit Cards</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 18] ::  creditgen       [         ]    :: Generates Credit Cards</p>
+    <a>[COMMAND 18] ::  creditgen       [            ]    :: Generates Credit Cards</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 19] ::  userinfo        [username ]    :: Gets all the info about a SERVER Member (Doesnt work in DM's)</p>
+    <a>[COMMAND 19] ::  userinfo        [username    ]    :: Gets all the info about a SERVER Member (Doesnt work in DM's)</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 20] ::  gay             [username ]    :: says how gay someone is</p>
+    <a>[COMMAND 20] ::  gay             [username    ]    :: says how gay someone is</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 21] ::  help            [         ]    :: Brings you to the Help/Commands Website</p>
+    <a>[COMMAND 21] ::  help            [            ]    :: Brings you to the Help/Commands Website</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 22] ::  dmall            [content ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
+    <a>[COMMAND 22] ::  dmall            [content    ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 23] ::  ascii            [content ]    :: Sends a message in ASCII</p>
+    <a>[COMMAND 23] ::  ascii            [content    ]    :: Sends a message in ASCII</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 24] ::  rps              [content ]    :: Play rock paper scissors</p>
+    <a>[COMMAND 24] ::  rps              [content    ]    :: Play rock paper scissors</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 25] ::  slap            [username ]    :: Slap someone</p>
+    <a>[COMMAND 25] ::  slap            [username    ]    :: Slap someone</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 26] ::  question        [content  ]    :: Its an Q&A..</p>
+    <a>[COMMAND 26] ::  question        [content     ]    :: Its an Q&A..</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 27] ::  coinflip        [         ]    :: Flips a Coin</p>
+    <a>[COMMAND 27] ::  coinflip        [            ]    :: Flips a Coin</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 28] ::  hammer          [username ]    :: hammer someone</p>
+    <a>[COMMAND 28] ::  hammer          [username    ]    :: hammer someone</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 29] ::  ide             [         ]    :: Shows some IDE code editors</p>
+    <a>[COMMAND 29] ::  ide             [            ]    :: Shows some IDE code editors</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 30] ::  roll            [         ]    :: Rolls between numbers</p>
+    <a>[COMMAND 30] ::  roll            [            ]    :: Rolls between numbers</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 31] ::  nickname        [username ] [conten t]   :: Rolls between numbers</p>
+    <a>[COMMAND 31] ::  nickname        [username    ] [number]   :: Rolls between numbers</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 32] ::  serverinfo      [         ]    :: Information about the server</p>
+    <a>[COMMAND 32] ::  serverinfo      [            ]    :: Information about the server</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 33] ::  uptime          [         ]    :: Displays the Uptime</p>
+    <a>[COMMAND 33] ::  uptime          [            ]    :: Displays the Uptime</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 34] ::  accgen          [         ]    :: Generates a Random Account</p>
+    <a>[COMMAND 34] ::  accgen          [            ]    :: Generates a Random Account</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 35] ::  im              [content  ]    :: Picture with your own text in it</p>
+    <a>[COMMAND 35] ::  im              [content     ]    :: Picture with your own text in it</p>
 		<a> </p>
 	</div>
-    <a>[COMMAND 36] ::  everyone       [          ]    :: Mentiones everyone without permissions</p>
+    <a>[COMMAND 36] ::  everyone       [content (url)]    :: Mentiones everyone without permissions</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 37] ::  scrape         [             ]    :: Scrapes proxys (Options in selfsettings.json)</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 38] ::  iq             [username     ]    :: Shows the IQ of a mentioned person</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
