--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [38]</p></section>
+<p>Commands [40]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -37,7 +37,7 @@
     <a>[COMMAND 2]  ::  purge           [100         ]    :: Deletes 100 messages you sent.</p>
 	<a> </p> 
 	        </div>
-    <a>[COMMAND 3]  ::  embed           [content     ]    :: Send a message in a embed.</p>
+    <a>[COMMAND 3]  ::  embed           [Title Body Footer URL]    :: Send a message in a embed.</p>
 	<a> </p>
 	        </div>
     <a>[COMMAND 4]  ::  restart         [            ]    :: Restarts the bot</p>
@@ -143,6 +143,12 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 38] ::  iq             [username     ]    :: Shows the IQ of a mentioned person</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 39] ::  spooky         [             ]    :: Ghosts will appear</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 40] ::  settings       [             ]    :: Will show all your SelfBot Settings (Not your token or your ID)</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
