--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [40]</p></section>
+<p>Commands [41]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -149,6 +149,9 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 40] ::  settings       [             ]    :: Will show all your SelfBot Settings (Not your token or your ID)</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 41] ::  webhookspam    [content (Webhook ID) (Webhook Token)]    :: Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
