--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [41]</p></section>
+<p>Commands [43]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -152,6 +152,12 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 41] ::  webhookspam    [content (Webhook ID) (Webhook Token)]    :: Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 42] ::  bold           [             ]    :: Send a Bold **Message**</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 43] ::  secret         [content      ]    :: Send a Secret ||Message||</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
