--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -159,6 +159,9 @@
 		</div>
     <a>[COMMAND 43] ::  secret         [content      ]    :: Send a Secret ||Message||</p>
 	<a> </p> 
+		</div>
+    <a>[COMMAND 44] ::  tts            [content      ]    :: Send a text to speak message</p>
+	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
 <p>This is not availible yet...</p></section>
