--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [44]</p></section>
+<p>Commands [46]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -161,6 +161,12 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 44] ::  tts            [content      ]    :: Send a text to speak message</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 45] ::  ban            [user reason       ]    :: Send a text to speak message</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 46] ::  tts            [user reason      ]    :: Send a text to speak message</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
