--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -163,10 +163,10 @@
     <a>[COMMAND 44] ::  tts            [content      ]    :: Send a text to speak message</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 45] ::  ban            [user reason       ]    :: Send a text to speak message</p>
+    <a>[COMMAND 45] ::  ban            [user reason       ]    :: Bans a member</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 46] ::  tts            [user reason      ]    :: Send a text to speak message</p>
+    <a>[COMMAND 46] ::  kick            [user reason      ]    :: kicks a member</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
