--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [46]</p></section>
+<p>Commands [47]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -166,7 +166,10 @@
     <a>[COMMAND 45] ::  ban            [user reason       ]    :: Bans a member</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 46] ::  kick            [user reason      ]    :: kicks a member</p>
+    <a>[COMMAND 46] ::  kick           [user reason      ]    :: kicks a member</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 47] ::  joke           [                 ]    :: Gives you a funny joke</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
