--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -151,7 +151,7 @@
     <a>[COMMAND 40] ::  settings       [             ]    :: Will show all your SelfBot Settings (Not your token or your ID)</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 41] ::  webhookspam    [content (Webhook ID) (Webhook Token)]    :: Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
+    <a>[COMMAND 41] ::  webhookspam    [(Webhook ID) (Webhook Token) content]    :: Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
 	<a> </p> 
 		</div>
     <a>[COMMAND 42] ::  bold           [             ]    :: Send a Bold **Message**</p>
