--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [47]</p></section>
+<p>Commands [48]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -170,6 +170,9 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 47] ::  joke           [                 ]    :: Gives you a funny joke</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 48] ::  convert        [youtube video id ]    :: Converts a youtube video into a mp3 file</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
