--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [48]</p></section>
+<p>Commands [49]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -173,6 +173,9 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 48] ::  convert        [youtube video id ]    :: Converts a youtube video into a mp3 file</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 49] ::  urban          [content          ]    :: Shows you the urban dictionary for a specific word</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
