--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -177,6 +177,9 @@
 		</div>
     <a>[COMMAND 49] ::  urban          [content          ]    :: Shows you the urban dictionary for a specific word</p>
 	<a> </p> 
+		</div>
+    <a>[COMMAND 50] ::  bottleflip     [                 ]    :: Flips a bottle</p>
+	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
 <p>This is not availible yet...</p></section>
