--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [49]</p></section>
+<p>Commands [51]</p></section>
 
 <div class="arrow">
     <span></span></div>
@@ -179,6 +179,9 @@
 	<a> </p> 
 		</div>
     <a>[COMMAND 50] ::  bottleflip     [                 ]    :: Flips a bottle</p>
+	<a> </p> 
+		</div>
+    <a>[COMMAND 51] ::  editor         [content(16)      ]    :: edits your message after every space</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
