--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -187,6 +187,8 @@
 <h1>Atomics SelfBot Settings</h1>
 <p>This is not availible yet...</p></section>
 </section>
+	</div>
+    <a>2020 Atomics SelfBot</p>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 	@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
