--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -31,157 +31,157 @@
 	<a> </p>
 	<a> </p>
 </div>
-    <a>[COMMAND 1]  ::  ping            [            ]    :: Displays your ping</p>
+    <a>Command 1  ::  ping            [            ]    :: Displays your ping</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 2]  ::  purge           [100         ]    :: Deletes 100 messages you sent.</p>
+    <a>Command 2  ::  purge           [100         ]    :: Deletes 100 messages you sent.</p>
 	<a> </p> 
 	        </div>
-    <a>[COMMAND 3]  ::  embed           [Title Body Footer URL]    :: Send a message in a embed.</p>
+    <a>Command 3  ::  embed           [Title Body Footer URL]    :: Send a message in a embed.</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 4]  ::  restart         [            ]    :: Restarts the bot</p>
+    <a>Command 4  ::  restart         [            ]    :: Restarts the bot</p>
 	<a> </p>
 	        </div>
-    <a>[COMMAND 5]  ::  spam            [ID          ]    :: Spam a users DM</p>
+    <a>Command 5  ::  spam            [ID          ]    :: Spam a users DM</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 6]  ::  tokengen        [content     ]    :: Generates 3 Discord Tokens</p>
+    <a>Command 6  ::  tokengen        [content     ]    :: Generates 3 Discord Tokens</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 7]  ::  nitrogen        [content     ]    :: Generates 3 Discord Nitro Codes</p>
+    <a>Command 7  ::  nitrogen        [content     ]    :: Generates 3 Discord Nitro Codes</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 8]  ::  atomic          [content     ]    :: See what it does</p>
+    <a>Command 8  ::  atomic          [content     ]    :: See what it does</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 9]  ::  lettercount     [content     ]    :: Counts letters</p>
+    <a>Command 9  ::  lettercount     [content     ]    :: Counts letters</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 10] ::  rpcname         [content     ]    :: Change RPC Details</p>
+    <a>Command 10 ::  rpcname         [content     ]    :: Change RPC Details</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 11] ::  hack            [username    ]    :: Hack somebodys account</p>
+    <a>Command 11 ::  hack            [username    ]    :: Hack somebodys account</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 12] ::  restart         [            ]    :: Restarts the SelfBot</p>
+    <a>Command 12 ::  restart         [            ]    :: Restarts the SelfBot</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 13] ::  dick            [username    ]    :: Displays the dicksize</p>
+    <a>Command 13 ::  dick            [username    ]    :: Displays the dicksize</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 14] ::  image           [content     ]    :: gets an image for what you searched</p>
+    <a>Command 14 ::  image           [content     ]    :: gets an image for what you searched</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 15] ::  avatar          [            ]    :: Displays your Profile picture</p>
+    <a>Command 15 ::  avatar          [            ]    :: Displays your Profile picture</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 16] ::  hello           [username    ]    :: says hello to someone</p>
+    <a>Command 16 ::  hello           [username    ]    :: says hello to someone</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 17] ::  creditgenvisa   [            ]    :: Generates Credit Cards</p>
+    <a>Command 17 ::  creditgenvisa   [            ]    :: Generates Credit Cards</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 18] ::  creditgen       [            ]    :: Generates Credit Cards</p>
+    <a>Command 18 ::  creditgen       [            ]    :: Generates Credit Cards</p>
 	<a> </p>
 		        </div>
-    <a>[COMMAND 19] ::  userinfo        [username    ]    :: Gets all the info about a SERVER Member (Doesnt work in DM's)</p>
+    <a>Command 19 ::  userinfo        [username    ]    :: Gets all the info about a SERVER Member (Doesnt work in DM's)</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 20] ::  gay             [username    ]    :: says how gay someone is</p>
+    <a>Command 20 ::  gay             [username    ]    :: says how gay someone is</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 21] ::  help            [            ]    :: Brings you to the Help/Commands Website</p>
+    <a>Command 21 ::  help            [            ]    :: Brings you to the Help/Commands Website</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 22] ::  dmall            [content    ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
+    <a>Command 22 ::  dmall            [content    ]    :: Dm's Everyone like seriusly EVERYONE (Risky)</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 23] ::  ascii            [content    ]    :: Sends a message in ASCII</p>
+    <a>Command 23 ::  ascii            [content    ]    :: Sends a message in ASCII</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 24] ::  rps              [content    ]    :: Play rock paper scissors</p>
+    <a>Command 24 ::  rps              [content    ]    :: Play rock paper scissors</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 25] ::  slap            [username    ]    :: Slap someone</p>
+    <a>Command 25 ::  slap            [username    ]    :: Slap someone</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 26] ::  question        [content     ]    :: Its an Q&A..</p>
+    <a>Command 26 ::  question        [content     ]    :: Its an Q&A..</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 27] ::  coinflip        [            ]    :: Flips a Coin</p>
+    <a>Command 27 ::  coinflip        [            ]    :: Flips a Coin</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 28] ::  hammer          [username    ]    :: hammer someone</p>
+    <a>Command 28 ::  hammer          [username    ]    :: hammer someone</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 29] ::  ide             [            ]    :: Shows some IDE code editors</p>
+    <a>Command 29 ::  ide             [            ]    :: Shows some IDE code editors</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 30] ::  roll            [            ]    :: Rolls between numbers</p>
+    <a>Command 30 ::  roll            [            ]    :: Rolls between numbers</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 31] ::  nickname        [username    ] [number]   :: Rolls between numbers</p>
+    <a>Command 31 ::  nickname        [username    ] [number]   :: Rolls between numbers</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 32] ::  serverinfo      [            ]    :: Information about the server</p>
+    <a>Command 32 ::  serverinfo      [            ]    :: Information about the server</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 33] ::  uptime          [            ]    :: Displays the Uptime</p>
+    <a>Command 33 ::  uptime          [            ]    :: Displays the Uptime</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 34] ::  accgen          [            ]    :: Generates a Random Account</p>
+    <a>Command 34 ::  accgen          [            ]    :: Generates a Random Account</p>
 	<a> </p>
 	</div>
-    <a>[COMMAND 35] ::  im              [content     ]    :: Picture with your own text in it</p>
+    <a>Command 35 ::  im              [content     ]    :: Picture with your own text in it</p>
 		<a> </p>
 	</div>
-    <a>[COMMAND 36] ::  everyone       [content (url)]    :: Mentiones everyone without permissions</p>
+    <a>Command 36 ::  everyone       [content (url)]    :: Mentiones everyone without permissions</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 37] ::  scrape         [             ]    :: Scrapes proxys (Options in selfsettings.json)</p>
+    <a>Command 37 ::  scrape         [             ]    :: Scrapes proxys (Options in selfsettings.json)</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 38] ::  iq             [username     ]    :: Shows the IQ of a mentioned person</p>
+    <a>Command 38 ::  iq             [username     ]    :: Shows the IQ of a mentioned person</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 39] ::  spooky         [             ]    :: Ghosts will appear</p>
+    <a>Command 39 ::  spooky         [             ]    :: Ghosts will appear</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 40] ::  settings       [             ]    :: Will show all your SelfBot Settings (Not your token or your ID)</p>
+    <a>Command 40 ::  settings       [             ]    :: Will show all your SelfBot Settings (Not your token or your ID)</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 41] ::  webhookspam    [(Webhook ID) (Webhook Token) content]    :: Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
+    <a>Command 41 ::  webhookspam    [(Webhook ID) (Webhook Token) content]    :: Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 42] ::  bold           [             ]    :: Send a Bold **Message**</p>
+    <a>Command 42 ::  bold           [             ]    :: Send a Bold **Message**</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 43] ::  secret         [content      ]    :: Send a Secret ||Message||</p>
+    <a>Command 43 ::  secret         [content      ]    :: Send a Secret ||Message||</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 44] ::  tts            [content      ]    :: Send a text to speak message</p>
+    <a>Command 44 ::  tts            [content      ]    :: Send a text to speak message</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 45] ::  ban            [user reason       ]    :: Bans a member</p>
+    <a>Command 45 ::  ban            [user reason       ]    :: Bans a member</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 46] ::  kick           [user reason      ]    :: kicks a member</p>
+    <a>Command 46 - kick - [user reason      ] - kicks a member</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 47] ::  joke           [                 ]    :: Gives you a funny joke</p>
+    <a>Command 47 - [                 ] - Gives you a funny joke</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 48] ::  convert        [youtube video id ]    :: Converts a youtube video into a mp3 file</p>
+    <a>Command 48 - convert - [youtube video id ] - Converts a youtube video into a mp3 file</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 49] ::  urban          [content          ]    :: Shows you the urban dictionary for a specific word</p>
+    <a>Command 49 - urban - [content          ] - Shows you the urban dictionary for a specific word</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 50] ::  bottleflip     [                 ]    :: Flips a bottle</p>
+    <a>Command 50 - bottleflip - [                 ] - Flips a bottle</p>
 	<a> </p> 
 		</div>
-    <a>[COMMAND 51] ::  editor         [content(16)      ]    :: edits your message after every space</p>
+    <a>Command 51 - editor - [content(16)      ] - edits your message after every space</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
