--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -121,7 +121,7 @@
     <a>Command 30 - roll            [            ] - Rolls between numbers</p>
 	<a> </p>
 	</div>
-    <a>Command 31 - nickname        [username    ] [number]   :: Rolls between numbers</p>
+    <a>Command 31 - nickname        [username    ] - Changes your nickname (On Servers)</p>
 	<a> </p>
 	</div>
     <a>Command 32 - serverinfo      [            ] - Information about the server</p>
