--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [51]</p></section>
+<p>Commands [52]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -181,7 +181,10 @@
     <a>Command 50 - bottleflip           [                 ] - Flips a bottle</p>
 	<a> </p> 
 		</div>
-    <a>Command 51 - editor           [content(16)      ] - edits your message after every space</p>
+    <a>Command 51 - editor           [content(16)      ] - Edits your message after every space</p>
+	<a> </p> 
+		</div>
+    <a>Command 52 - time             [                 ] - Shows the current time (TIME, DAY of MONTH, YEAR)</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
