--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [52]</p></section>
+<p>Commands [53]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -185,6 +185,9 @@
 	<a> </p> 
 		</div>
     <a>Command 52 - time             [                 ] - Shows the current time (TIME, DAY of MONTH, YEAR)</p>
+	<a> </p> 
+		</div>
+    <a>Command 53 - streamtime             [                 ] - Shows the current time (TIME) in your status</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
