--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [53]</p></section>
+<p>Commands [55]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -188,6 +188,12 @@
 	<a> </p> 
 		</div>
     <a>Command 53 - streamtime             [                 ] - Shows the current time (TIME) in your status</p>
+	<a> </p> 
+		</div>
+    <a>Command 54 - shorturl             [URL] - Shortens a URL</p>
+	<a> </p> 
+		</div>
+    <a>Command 55 - calculate             [Equation] - Calculates things (even your homework)</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
