--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [55]</p></section>
+<p>Commands [56]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -194,6 +194,9 @@
 	<a> </p> 
 		</div>
     <a>Command 55 - calculate             [Equation] - Calculates things (even your homework)</p>
+	<a> </p> 
+		</div>
+    <a>Command 56 - geoip             [IP] -Gets info about a IP</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
