--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [56]</p></section>
+<p>Commands [60]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -196,7 +196,19 @@
     <a>Command 55 - calculate             [Equation] - Calculates things (even your homework)</p>
 	<a> </p> 
 		</div>
-    <a>Command 56 - geoip             [IP] -Gets info about a IP</p>
+    <a>Command 56 - geoip             [IP] - Gets info about a IP</p>
+	<a> </p> 
+		</div>
+    <a>Command 57 - guildlist             [] - Lists all the servers you are in</p>
+	<a> </p> 
+		</div>
+    <a>Command 58 - blowjob             [] - Sends a random bloowjob picture/gif in the chat</p>
+	<a> </p> 
+		</div>
+    <a>Command 59 - anal             [] - Sends a random anal picture/gif in the chat</p>
+	<a> </p> 
+		</div>
+    <a>Command 60 - tits             [] - Sends a random tits picture/gif in the chat</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
