--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [60]</p></section>
+<p>Commands [63]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -209,6 +209,15 @@
 	<a> </p> 
 		</div>
     <a>Command 60 - tits             [] - Sends a random tits picture/gif in the chat</p>
+	<a> </p> 
+		</div>
+    <a>Command 61 - tweet             [username message] - Send a picture of a fake tweet</p>
+	<a> </p> 
+		</div>
+    <a>Command 62 - btc             [] - Shows the current BTC price</p>
+	<a> </p> 
+		</div>
+    <a>Command 63 - eth             [] - Shows the current ETH price</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
