--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [63]</p></section>
+<p>Commands [64]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -218,6 +218,9 @@
 	<a> </p> 
 		</div>
     <a>Command 63 - eth             [] - Shows the current ETH price</p>
+	<a> </p> 
+		</div>
+    <a>Command 64 - empty             [] - Sends a big empty message</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
