--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [64]</p></section>
+<p>Commands [67]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -211,16 +211,25 @@
     <a>Command 60 - tits             [] - Sends a random tits picture/gif in the chat</p>
 	<a> </p> 
 		</div>
-    <a>Command 61 - tweet             [username message] - Send a picture of a fake tweet</p>
+    <a>Command 61 - lesbian             [] - Sends a random Lesbian picture/gif in the chat</p>
 	<a> </p> 
 		</div>
-    <a>Command 62 - btc             [] - Shows the current BTC price</p>
+    <a>Command 62 - lewdneko             [] - Sends a random Lewdneko picture/gif in the chat</p>
 	<a> </p> 
 		</div>
-    <a>Command 63 - eth             [] - Shows the current ETH price</p>
+    <a>Command 63 - tweet             [username message] - Send a picture of a fake tweet</p>
 	<a> </p> 
 		</div>
-    <a>Command 64 - empty             [] - Sends a big empty message</p>
+    <a>Command 64 - btc             [] - Shows the current BTC price</p>
+	<a> </p> 
+		</div>
+    <a>Command 65 - eth             [] - Shows the current ETH price</p>
+	<a> </p> 
+		</div>
+    <a>Command 66 - empty             [] - Sends a big empty message</p>
+	<a> </p> 
+		</div>
+    <a>Command 67 - corona             [] - Gets global COVID-19 Stats</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
