--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [67]</p></section>
+<p>Commands [68]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -230,6 +230,9 @@
 	<a> </p> 
 		</div>
     <a>Command 67 - corona             [] - Gets global COVID-19 Stats</p>
+	<a> </p> 
+		</div>
+    <a>Command 68 - reverse             [] - Reverses a text</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
