--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -21,7 +21,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [68]</p></section>
+<p>Commands [70]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p>
 	
 <div class="arrow">
@@ -232,7 +232,13 @@
     <a>Command 67 - corona             [] - Gets global COVID-19 Stats</p>
 	<a> </p> 
 		</div>
-    <a>Command 68 - reverse             [] - Reverses a text</p>
+    <a>Command 68 - reverse             [content] - Reverses a text</p>
+	<a> </p> 
+		</div>
+    <a>Command 69 - servericon            [] - Gets the Server Icon</p>
+	<a> </p> 
+		</div>
+    <a>Command 70 - achievement             [content] - Fake minecraft achievement</p>
 	<a> </p> 
 <section id="home">
 <h1>Atomics SelfBot Settings</h1>
