--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -243,6 +243,10 @@
 		</div>
     <a>Command 71 - combine             [name1, name2] - Combines 2 names into one</p>
 	<a> </p> 
+	<section id="discordsection">
+	<h1>Join our Discord!</h1>
+<iframe src="https://discordapp.com/widget?id=694836380076998656&theme=dark" width="700" height="500" allowtransparency="true" frameborder="0"></iframe>
+	</section>
 <section id="home">
 <h1>Leave a Review</h1>
 <div class="rate">
@@ -256,10 +260,9 @@
     <label for="star2" title="2 Stars">2 stars</label>
     <input type="radio" id="star1" name="rate" value="1" />
     <label for="star1" title="1 Star">1 star</label>
-  </div>
-
 </div>
 </section>
+
 	</div>
     <a>2020 Atomics SelfBot</p>
 <style>
